Fix vertical thread layout issue
Sometimes the header above, including the title and search bar,
disappears.

--- a/webroot/static/styles/views/thread.css
+++ b/webroot/static/styles/views/thread.css
@@ -3,10 +3,8 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 [id$="vertical-thread"] {
-  position: absolute;
+  position: relative;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
 }
 
 [id$="vertical-thread"][aria-busy="true"] > * {
